// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Meta renders with mandatory props 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-bottom: 32px;
}

<div
    class="emotion-0"
  />
  @media screen and (max-width: 767px) {
  .emotion-0 {
    margin-bottom: 48px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    margin-bottom: 24px;
  }
}

@media screen {
  .emotion-1 {
    display: none;
  }
}

@media screen and (min-width: 480px) {
  .emotion-1 {
    display: none;
  }
}

@media screen and (min-width: 768px) {
  .emotion-1 {
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-1 {
    display: block;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-top: calc(-16px/2);
  margin-bottom: calc(-16px/2);
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(16px/2);
  margin-bottom: calc(16px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-5 {
    max-width: 100%;
  }
}

.emotion-6 {
  font-family: 'Poppins',sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 600;
  letter-spacing: 0;
  padding: 1px 0px;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4121527777777778em;
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.5527777777777778em;
}

.emotion-7 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #162740;
}

.emotion-7 svg {
  fill: #162740;
}

.emotion-9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-10 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 24px;
  padding: 4px 8px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  color: #FFFFFF;
  background-color: #577FFB;
  border-radius: 20rem;
  white-space: nowrap;
}

.emotion-10 svg {
  width: 16px;
  height: 16px;
}

.emotion-10 svg {
  fill: #FFFFFF;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-12 {
    max-width: 100%;
  }
}

.emotion-13 {
  padding: 4px;
}

.emotion-14 {
  margin: 0;
  padding: 1px 0;
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.7142857142857142;
  font-weight: 700;
  letter-spacing: 0;
}

.emotion-14::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4915178571428571em;
}

.emotion-14::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.6321428571428571em;
}

.emotion-15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-15 {
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-16 {
    margin-right: 32px;
  }
}

.emotion-17 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-left-width: 1px;
  display: inline-block;
  height: 100%;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-top: calc(-24px/2);
  margin-bottom: calc(-24px/2);
}

.emotion-20 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(24px/2);
  margin-bottom: calc(24px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-20 {
    max-width: 100%;
  }
}

.emotion-24 {
  display: inline-block;
  transition-property: color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  color: #577FFB;
}

.emotion-24 svg {
  fill: #577FFB;
}

.emotion-24:hover:not(:disabled) {
  color: #3358CC;
}

.emotion-24:hover:not(:disabled) svg {
  fill: #3358CC;
}

.emotion-24:active:not(:disabled) {
  color: #213A82;
}

.emotion-24:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-24:visited:not(:disabled) {
  color: #503B8C;
}

.emotion-24:visited:not(:disabled) svg {
  fill: #503B8C;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-24 {
    vertical-align: text-bottom;
  }
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-26 {
  margin: 0;
  padding: 1px 0;
  font-family: 'Poppins',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  letter-spacing: 0;
  display: inline-block;
  display: block;
}

.emotion-26::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.384375em;
}

.emotion-26::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.525em;
}

.emotion-27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: calc(-16px/2);
  margin-right: calc(-16px/2);
}

.emotion-28 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(16px/2);
  margin-right: calc(16px/2);
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-28 {
    max-width: 100%;
  }
}

.emotion-29 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-30 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 44px;
  width: 100%;
  padding: 8px 12px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  border-style: solid;
  border-color: #555E74;
  border-width: 1px;
  border-radius: 20rem;
  color: #555E74;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-30 svg {
  width: 16px;
  height: 16px;
}

.emotion-30 svg {
  fill: #555E74;
}

.emotion-30:hover:not(:disabled) {
  background-color: #EBEBEB;
  border-color: #243853;
}

.emotion-30:active:not(:disabled) {
  background-color: #BBC3C9;
  border-color: #162740;
}

.emotion-30:disabled {
  border-color: #E4E4E4;
  color: #BBC3C9;
}

.emotion-30:disabled svg {
  fill: #BBC3C9;
}

.emotion-31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-32 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-32 {
    max-width: 100%;
  }
}

.emotion-33 {
  fill: #555E74;
  vertical-align: unset;
  display: inline-block;
}

.emotion-35 {
  font-family: 'Poppins',sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 600;
  letter-spacing: 0;
}

.emotion-35::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.4677083333333334em + 1.5px);
}

.emotion-35::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.6083333333333334em;
}

.emotion-36 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(16px/2);
  margin-right: calc(16px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-36 {
    max-width: 100%;
  }
}

.emotion-37 {
  margin-bottom: 24px;
}

.emotion-38 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-top-width: 1px;
  width: 100%;
}

@media screen {
  .emotion-39 {
    display: block;
  }
}

@media screen and (min-width: 480px) {
  .emotion-39 {
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-39 {
    display: none;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-39 {
    display: none;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-39 {
    display: none;
  }
}

.emotion-41 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(24px/2);
  margin-bottom: calc(24px/2);
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-41 {
    max-width: 100%;
  }
}

.emotion-42 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-42 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    max-width: 50%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-42 {
    padding: 0 12px;
    margin-top: 24px;
  }
}

.emotion-57 {
  margin-right: 32px;
}

.emotion-58 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  margin-top: calc(-8px/2);
  margin-bottom: calc(-8px/2);
}

.emotion-58:before,
.emotion-58:after {
  content: '';
  display: block;
}

.emotion-68 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-69 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

@media screen {
  .emotion-69 {
    margin: -16px -8px 0 -8px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-69 {
    margin: -16px -8px 0 -8px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-69 {
    margin: -16px -8px 0 -8px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-69 {
    margin: -24px -12px 0 -12px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-69 {
    margin: -24px -12px 0 -12px;
  }
}

.emotion-70 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-70 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-70 {
    padding: 0 12px;
    margin-top: 24px;
  }
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <section
                class="emotion-6"
              >
                <h1
                  class="nk-headline-heading emotion-7"
                >
                  Status
                </h1>
              </section>
            </div>
            <div
              class="emotion-5"
            >
              <div
                class="emotion-9"
              >
                <div
                  class="emotion-10"
                  data-testid="flag"
                >
                  <div
                    class="emotion-11"
                  >
                    <div
                      class="emotion-12"
                    >
                      <div
                        class="emotion-13"
                      >
                        <p
                          class="emotion-14"
                        >
                          Supported
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-15"
          >
            <div
              class="emotion-16"
            />
            <hr
              aria-hidden="true"
              class="emotion-17"
              data-testid="divider"
            />
            <div
              class="emotion-16"
            />
          </div>
          <div
            class="emotion-19"
          >
            <div
              class="emotion-20"
            >
              <section
                class="emotion-6"
              >
                <h1
                  class="nk-headline-heading emotion-7"
                >
                  Introduced
                </h1>
              </section>
            </div>
            <div
              class="emotion-20"
            >
              <a
                class="emotion-24"
                href="/"
              >
                <span
                  class="emotion-25"
                >
                  <span
                    class="emotion-26"
                  >
                    v0.1
                  </span>
                </span>
              </a>
            </div>
          </div>
        </div>
        <div
          class="emotion-27"
        >
          <div
            class="emotion-28"
          >
            <div
              class="emotion-29"
            >
              <a
                class="emotion-30"
                data-testid="buttonLink"
                href="https://github.com/newscorp-ghfb/ncu-newskit"
                target="_blank"
              >
                <div
                  class="emotion-31"
                >
                  <div
                    class="emotion-32"
                  >
                    <svg
                      aria-hidden="true"
                      class="emotion-33"
                      fill="currentColor"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.9990792,2 C6.47773105,2 2,6.47565999 2,11.9970521 C2,16.4137976 4.86503576,20.1603908 8.83876117,21.4822847 C9.33908346,21.5743385 9.5214095,21.2656512 9.5214095,21.000536 C9.5214095,20.7636506 9.512815,20.1346157 9.50790386,19.3006075 C6.72635747,19.904481 6.13947635,17.9603029 6.13947635,17.9603029 C5.68458209,16.8053335 5.02894503,16.4978735 5.02894503,16.4978735 C4.12099819,15.878044 5.09770097,15.8903179 5.09770097,15.8903179 C6.10141502,15.9608925 6.62936247,16.9207077 6.62936247,16.9207077 C7.52134811,18.4481885 8.97013414,18.0069436 9.53982627,17.7510338 C9.63068234,17.1054292 9.88913104,16.6647979 10.174591,16.415025 C7.95414224,16.1627974 5.6195095,15.3048551 5.6195095,11.4741861 C5.6195095,10.3830406 6.00933116,9.49011794 6.64900703,8.79173579 C6.54587311,8.53889444 6.20270727,7.52200584 6.74722981,6.14610707 C6.74722981,6.14610707 7.5864207,5.87730972 9.4968538,7.17097368 C10.2943,6.94881697 11.150066,6.8383523 12.0003069,6.83405645 C12.849934,6.8383523 13.7050861,6.94881697 14.5037601,7.17097368 C16.4129654,5.87730972 17.2509285,6.14610707 17.2509285,6.14610707 C17.7966788,7.52200584 17.453513,8.53889444 17.350993,8.79173579 C17.9918966,9.49011794 18.3786488,10.3830406 18.3786488,11.4741861 C18.3786488,15.3146742 16.0403327,16.1597289 13.8131312,16.407047 C14.1716443,16.7157344 14.4914822,17.3257448 14.4914822,18.2585575 C14.4914822,19.5945663 14.4792044,20.6728241 14.4792044,21.000536 C14.4792044,21.2681059 14.6596888,21.5792481 15.1667639,21.481671 C19.1374198,20.1567087 22,16.4125702 22,11.9970521 C22,6.47565999 17.5222689,2 11.9990792,2"
                        fill-rule="nonzero"
                      />
                    </svg>
                  </div>
                  <div
                    class="emotion-32"
                  >
                    <span
                      class="emotion-35"
                    >
                      View code
                    </span>
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div
            class="emotion-36"
          />
        </div>
      </div>
      <div
        class="emotion-37"
      />
      <hr
        aria-hidden="true"
        class="emotion-38"
        data-testid="divider"
      />
    </div>
    <div
      class="emotion-39"
    >
      <div
        class="emotion-19"
      >
        <div
          class="emotion-41"
        >
          <div
            class="emotion-42"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <section
                  class="emotion-6"
                >
                  <h1
                    class="nk-headline-heading emotion-7"
                  >
                    Status
                  </h1>
                </section>
              </div>
              <div
                class="emotion-5"
              >
                <div
                  class="emotion-9"
                >
                  <div
                    class="emotion-10"
                    data-testid="flag"
                  >
                    <div
                      class="emotion-11"
                    >
                      <div
                        class="emotion-12"
                      >
                        <div
                          class="emotion-13"
                        >
                          <p
                            class="emotion-14"
                          >
                            Supported
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-42"
          >
            <div
              class="emotion-3"
            >
              <hr
                aria-hidden="true"
                class="emotion-17"
                data-testid="divider"
              />
              <div
                class="emotion-57"
              />
              <div
                class="emotion-58"
              />
              <div
                class="emotion-19"
              >
                <div
                  class="emotion-20"
                >
                  <section
                    class="emotion-6"
                  >
                    <h1
                      class="nk-headline-heading emotion-7"
                    >
                      Introduced
                    </h1>
                  </section>
                </div>
                <div
                  class="emotion-20"
                >
                  <a
                    class="emotion-24"
                    href="/"
                  >
                    <span
                      class="emotion-25"
                    >
                      <span
                        class="emotion-26"
                      >
                        v0.1
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-41"
        >
          <div
            class="emotion-68"
          >
            <div
              class="emotion-69"
            >
              <div
                class="emotion-70"
              >
                <hr
                  aria-hidden="true"
                  class="emotion-38"
                  data-testid="divider"
                />
                <div
                  class="emotion-37"
                />
                <div
                  class="emotion-29"
                >
                  <a
                    class="emotion-30"
                    data-testid="buttonLink"
                    href="https://github.com/newscorp-ghfb/ncu-newskit"
                    target="_blank"
                  >
                    <div
                      class="emotion-31"
                    >
                      <div
                        class="emotion-32"
                      >
                        <svg
                          aria-hidden="true"
                          class="emotion-33"
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M11.9990792,2 C6.47773105,2 2,6.47565999 2,11.9970521 C2,16.4137976 4.86503576,20.1603908 8.83876117,21.4822847 C9.33908346,21.5743385 9.5214095,21.2656512 9.5214095,21.000536 C9.5214095,20.7636506 9.512815,20.1346157 9.50790386,19.3006075 C6.72635747,19.904481 6.13947635,17.9603029 6.13947635,17.9603029 C5.68458209,16.8053335 5.02894503,16.4978735 5.02894503,16.4978735 C4.12099819,15.878044 5.09770097,15.8903179 5.09770097,15.8903179 C6.10141502,15.9608925 6.62936247,16.9207077 6.62936247,16.9207077 C7.52134811,18.4481885 8.97013414,18.0069436 9.53982627,17.7510338 C9.63068234,17.1054292 9.88913104,16.6647979 10.174591,16.415025 C7.95414224,16.1627974 5.6195095,15.3048551 5.6195095,11.4741861 C5.6195095,10.3830406 6.00933116,9.49011794 6.64900703,8.79173579 C6.54587311,8.53889444 6.20270727,7.52200584 6.74722981,6.14610707 C6.74722981,6.14610707 7.5864207,5.87730972 9.4968538,7.17097368 C10.2943,6.94881697 11.150066,6.8383523 12.0003069,6.83405645 C12.849934,6.8383523 13.7050861,6.94881697 14.5037601,7.17097368 C16.4129654,5.87730972 17.2509285,6.14610707 17.2509285,6.14610707 C17.7966788,7.52200584 17.453513,8.53889444 17.350993,8.79173579 C17.9918966,9.49011794 18.3786488,10.3830406 18.3786488,11.4741861 C18.3786488,15.3146742 16.0403327,16.1597289 13.8131312,16.407047 C14.1716443,16.7157344 14.4914822,17.3257448 14.4914822,18.2585575 C14.4914822,19.5945663 14.4792044,20.6728241 14.4792044,21.000536 C14.4792044,21.2681059 14.6596888,21.5792481 15.1667639,21.481671 C19.1374198,20.1567087 22,16.4125702 22,11.9970521 C22,6.47565999 17.5222689,2 11.9990792,2"
                            fill-rule="nonzero"
                          />
                        </svg>
                      </div>
                      <div
                        class="emotion-32"
                      >
                        <span
                          class="emotion-35"
                        >
                          View code
                        </span>
                      </div>
                    </div>
                  </a>
                </div>
              </div>
              <div
                class="emotion-70"
              >
                <div
                  class="emotion-37"
                />
                <hr
                  aria-hidden="true"
                  class="emotion-38"
                  data-testid="divider"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  @media screen and (max-width: 767px) {
  .emotion-0 {
    margin-bottom: 0;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    margin-bottom: 80px;
  }
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Meta renders with mandatory props and figma button 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-bottom: 32px;
}

<div
    class="emotion-0"
  />
  @media screen and (max-width: 767px) {
  .emotion-0 {
    margin-bottom: 48px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    margin-bottom: 24px;
  }
}

@media screen {
  .emotion-1 {
    display: none;
  }
}

@media screen and (min-width: 480px) {
  .emotion-1 {
    display: none;
  }
}

@media screen and (min-width: 768px) {
  .emotion-1 {
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-1 {
    display: block;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-top: calc(-16px/2);
  margin-bottom: calc(-16px/2);
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(16px/2);
  margin-bottom: calc(16px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-5 {
    max-width: 100%;
  }
}

.emotion-6 {
  font-family: 'Poppins',sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 600;
  letter-spacing: 0;
  padding: 1px 0px;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4121527777777778em;
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.5527777777777778em;
}

.emotion-7 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #162740;
}

.emotion-7 svg {
  fill: #162740;
}

.emotion-9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-10 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 24px;
  padding: 4px 8px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  color: #FFFFFF;
  background-color: #577FFB;
  border-radius: 20rem;
  white-space: nowrap;
}

.emotion-10 svg {
  width: 16px;
  height: 16px;
}

.emotion-10 svg {
  fill: #FFFFFF;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-12 {
    max-width: 100%;
  }
}

.emotion-13 {
  padding: 4px;
}

.emotion-14 {
  margin: 0;
  padding: 1px 0;
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.7142857142857142;
  font-weight: 700;
  letter-spacing: 0;
}

.emotion-14::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4915178571428571em;
}

.emotion-14::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.6321428571428571em;
}

.emotion-15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-15 {
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-16 {
    margin-right: 32px;
  }
}

.emotion-17 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-left-width: 1px;
  display: inline-block;
  height: 100%;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-top: calc(-24px/2);
  margin-bottom: calc(-24px/2);
}

.emotion-20 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(24px/2);
  margin-bottom: calc(24px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-20 {
    max-width: 100%;
  }
}

.emotion-24 {
  display: inline-block;
  transition-property: color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  color: #577FFB;
}

.emotion-24 svg {
  fill: #577FFB;
}

.emotion-24:hover:not(:disabled) {
  color: #3358CC;
}

.emotion-24:hover:not(:disabled) svg {
  fill: #3358CC;
}

.emotion-24:active:not(:disabled) {
  color: #213A82;
}

.emotion-24:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-24:visited:not(:disabled) {
  color: #503B8C;
}

.emotion-24:visited:not(:disabled) svg {
  fill: #503B8C;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-24 {
    vertical-align: text-bottom;
  }
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-26 {
  margin: 0;
  padding: 1px 0;
  font-family: 'Poppins',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  letter-spacing: 0;
  display: inline-block;
  display: block;
}

.emotion-26::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.384375em;
}

.emotion-26::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.525em;
}

.emotion-27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: calc(-16px/2);
  margin-right: calc(-16px/2);
}

.emotion-28 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(16px/2);
  margin-right: calc(16px/2);
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-28 {
    max-width: 100%;
  }
}

.emotion-29 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-30 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 44px;
  width: 100%;
  padding: 8px 12px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  border-style: solid;
  border-color: #555E74;
  border-width: 1px;
  border-radius: 20rem;
  color: #555E74;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-30 svg {
  width: 16px;
  height: 16px;
}

.emotion-30 svg {
  fill: #555E74;
}

.emotion-30:hover:not(:disabled) {
  background-color: #EBEBEB;
  border-color: #243853;
}

.emotion-30:active:not(:disabled) {
  background-color: #BBC3C9;
  border-color: #162740;
}

.emotion-30:disabled {
  border-color: #E4E4E4;
  color: #BBC3C9;
}

.emotion-30:disabled svg {
  fill: #BBC3C9;
}

.emotion-31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-32 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-32 {
    max-width: 100%;
  }
}

.emotion-33 {
  fill: #555E74;
  vertical-align: unset;
  display: inline-block;
}

.emotion-35 {
  font-family: 'Poppins',sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 600;
  letter-spacing: 0;
}

.emotion-35::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.4677083333333334em + 1.5px);
}

.emotion-35::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.6083333333333334em;
}

.emotion-36 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(16px/2);
  margin-right: calc(16px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-36 {
    max-width: 100%;
  }
}

.emotion-44 {
  margin-bottom: 24px;
}

.emotion-45 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-top-width: 1px;
  width: 100%;
}

@media screen {
  .emotion-46 {
    display: block;
  }
}

@media screen and (min-width: 480px) {
  .emotion-46 {
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-46 {
    display: none;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-46 {
    display: none;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-46 {
    display: none;
  }
}

.emotion-48 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(24px/2);
  margin-bottom: calc(24px/2);
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-48 {
    max-width: 100%;
  }
}

.emotion-49 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-49 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    max-width: 50%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-49 {
    padding: 0 12px;
    margin-top: 24px;
  }
}

.emotion-64 {
  margin-right: 32px;
}

.emotion-65 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  margin-top: calc(-8px/2);
  margin-bottom: calc(-8px/2);
}

.emotion-65:before,
.emotion-65:after {
  content: '';
  display: block;
}

.emotion-75 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-76 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

@media screen {
  .emotion-76 {
    margin: -16px -8px 0 -8px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-76 {
    margin: -16px -8px 0 -8px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-76 {
    margin: -16px -8px 0 -8px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-76 {
    margin: -24px -12px 0 -12px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-76 {
    margin: -24px -12px 0 -12px;
  }
}

.emotion-77 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-77 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-77 {
    padding: 0 12px;
    margin-top: 24px;
  }
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <section
                class="emotion-6"
              >
                <h1
                  class="nk-headline-heading emotion-7"
                >
                  Status
                </h1>
              </section>
            </div>
            <div
              class="emotion-5"
            >
              <div
                class="emotion-9"
              >
                <div
                  class="emotion-10"
                  data-testid="flag"
                >
                  <div
                    class="emotion-11"
                  >
                    <div
                      class="emotion-12"
                    >
                      <div
                        class="emotion-13"
                      >
                        <p
                          class="emotion-14"
                        >
                          Supported
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-15"
          >
            <div
              class="emotion-16"
            />
            <hr
              aria-hidden="true"
              class="emotion-17"
              data-testid="divider"
            />
            <div
              class="emotion-16"
            />
          </div>
          <div
            class="emotion-19"
          >
            <div
              class="emotion-20"
            >
              <section
                class="emotion-6"
              >
                <h1
                  class="nk-headline-heading emotion-7"
                >
                  Introduced
                </h1>
              </section>
            </div>
            <div
              class="emotion-20"
            >
              <a
                class="emotion-24"
                href="/"
              >
                <span
                  class="emotion-25"
                >
                  <span
                    class="emotion-26"
                  >
                    v0.1
                  </span>
                </span>
              </a>
            </div>
          </div>
        </div>
        <div
          class="emotion-27"
        >
          <div
            class="emotion-28"
          >
            <div
              class="emotion-29"
            >
              <a
                class="emotion-30"
                data-testid="buttonLink"
                href="https://github.com/newscorp-ghfb/ncu-newskit"
                target="_blank"
              >
                <div
                  class="emotion-31"
                >
                  <div
                    class="emotion-32"
                  >
                    <svg
                      aria-hidden="true"
                      class="emotion-33"
                      fill="currentColor"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.9990792,2 C6.47773105,2 2,6.47565999 2,11.9970521 C2,16.4137976 4.86503576,20.1603908 8.83876117,21.4822847 C9.33908346,21.5743385 9.5214095,21.2656512 9.5214095,21.000536 C9.5214095,20.7636506 9.512815,20.1346157 9.50790386,19.3006075 C6.72635747,19.904481 6.13947635,17.9603029 6.13947635,17.9603029 C5.68458209,16.8053335 5.02894503,16.4978735 5.02894503,16.4978735 C4.12099819,15.878044 5.09770097,15.8903179 5.09770097,15.8903179 C6.10141502,15.9608925 6.62936247,16.9207077 6.62936247,16.9207077 C7.52134811,18.4481885 8.97013414,18.0069436 9.53982627,17.7510338 C9.63068234,17.1054292 9.88913104,16.6647979 10.174591,16.415025 C7.95414224,16.1627974 5.6195095,15.3048551 5.6195095,11.4741861 C5.6195095,10.3830406 6.00933116,9.49011794 6.64900703,8.79173579 C6.54587311,8.53889444 6.20270727,7.52200584 6.74722981,6.14610707 C6.74722981,6.14610707 7.5864207,5.87730972 9.4968538,7.17097368 C10.2943,6.94881697 11.150066,6.8383523 12.0003069,6.83405645 C12.849934,6.8383523 13.7050861,6.94881697 14.5037601,7.17097368 C16.4129654,5.87730972 17.2509285,6.14610707 17.2509285,6.14610707 C17.7966788,7.52200584 17.453513,8.53889444 17.350993,8.79173579 C17.9918966,9.49011794 18.3786488,10.3830406 18.3786488,11.4741861 C18.3786488,15.3146742 16.0403327,16.1597289 13.8131312,16.407047 C14.1716443,16.7157344 14.4914822,17.3257448 14.4914822,18.2585575 C14.4914822,19.5945663 14.4792044,20.6728241 14.4792044,21.000536 C14.4792044,21.2681059 14.6596888,21.5792481 15.1667639,21.481671 C19.1374198,20.1567087 22,16.4125702 22,11.9970521 C22,6.47565999 17.5222689,2 11.9990792,2"
                        fill-rule="nonzero"
                      />
                    </svg>
                  </div>
                  <div
                    class="emotion-32"
                  >
                    <span
                      class="emotion-35"
                    >
                      View code
                    </span>
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div
            class="emotion-36"
          >
            <div
              class="emotion-29"
            >
              <a
                class="emotion-30"
                data-testid="buttonLink"
                href="https://github.com/newscorp-ghfb/ncu-newskit"
                target="_blank"
              >
                <div
                  class="emotion-31"
                >
                  <div
                    class="emotion-32"
                  >
                    <svg
                      aria-hidden="true"
                      class="emotion-33"
                      fill="currentColor"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12.3333 12C12.3333 11.0275 12.7196 10.0949 13.4073 9.40729C14.0949 8.71965 15.0275 8.33334 16 8.33334C16.9724 8.33334 17.9051 8.71965 18.5927 9.40729C19.2803 10.0949 19.6666 11.0275 19.6666 12C19.6666 12.9725 19.2803 13.9051 18.5927 14.5927C17.9051 15.2804 16.9724 15.6667 16 15.6667C15.0275 15.6667 14.0949 15.2804 13.4073 14.5927C12.7196 13.9051 12.3333 12.9725 12.3333 12V12Z"
                        fill="#1ABCFE"
                      />
                      <path
                        d="M5 19.3333C5 18.3609 5.38631 17.4282 6.07394 16.7406C6.76158 16.053 7.69421 15.6667 8.66667 15.6667H12.3333V19.3333C12.3333 20.3058 11.947 21.2384 11.2594 21.926C10.5718 22.6137 9.63913 23 8.66667 23C7.69421 23 6.76158 22.6137 6.07394 21.926C5.38631 21.2384 5 20.3058 5 19.3333V19.3333Z"
                        fill="#0ACF83"
                      />
                      <path
                        d="M12.3333 1V8.33333H16C16.9724 8.33333 17.9051 7.94703 18.5927 7.25939C19.2803 6.57176 19.6666 5.63913 19.6666 4.66667C19.6666 3.69421 19.2803 2.76158 18.5927 2.07394C17.9051 1.38631 16.9724 1 16 1L12.3333 1Z"
                        fill="#FF7262"
                      />
                      <path
                        d="M5 4.66667C5 5.63913 5.38631 6.57176 6.07394 7.25939C6.76158 7.94703 7.69421 8.33333 8.66667 8.33333H12.3333V1H8.66667C7.69421 1 6.76158 1.38631 6.07394 2.07394C5.38631 2.76158 5 3.69421 5 4.66667V4.66667Z"
                        fill="#F24E1E"
                      />
                      <path
                        d="M5 12C5 12.9725 5.38631 13.9051 6.07394 14.5927C6.76158 15.2804 7.69421 15.6667 8.66667 15.6667H12.3333V8.33334H8.66667C7.69421 8.33334 6.76158 8.71965 6.07394 9.40729C5.38631 10.0949 5 11.0275 5 12V12Z"
                        fill="#A259FF"
                      />
                    </svg>
                  </div>
                  <div
                    class="emotion-32"
                  >
                    <span
                      class="emotion-35"
                    >
                      View Design
                    </span>
                  </div>
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-44"
      />
      <hr
        aria-hidden="true"
        class="emotion-45"
        data-testid="divider"
      />
    </div>
    <div
      class="emotion-46"
    >
      <div
        class="emotion-19"
      >
        <div
          class="emotion-48"
        >
          <div
            class="emotion-49"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <section
                  class="emotion-6"
                >
                  <h1
                    class="nk-headline-heading emotion-7"
                  >
                    Status
                  </h1>
                </section>
              </div>
              <div
                class="emotion-5"
              >
                <div
                  class="emotion-9"
                >
                  <div
                    class="emotion-10"
                    data-testid="flag"
                  >
                    <div
                      class="emotion-11"
                    >
                      <div
                        class="emotion-12"
                      >
                        <div
                          class="emotion-13"
                        >
                          <p
                            class="emotion-14"
                          >
                            Supported
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-49"
          >
            <div
              class="emotion-3"
            >
              <hr
                aria-hidden="true"
                class="emotion-17"
                data-testid="divider"
              />
              <div
                class="emotion-64"
              />
              <div
                class="emotion-65"
              />
              <div
                class="emotion-19"
              >
                <div
                  class="emotion-20"
                >
                  <section
                    class="emotion-6"
                  >
                    <h1
                      class="nk-headline-heading emotion-7"
                    >
                      Introduced
                    </h1>
                  </section>
                </div>
                <div
                  class="emotion-20"
                >
                  <a
                    class="emotion-24"
                    href="/"
                  >
                    <span
                      class="emotion-25"
                    >
                      <span
                        class="emotion-26"
                      >
                        v0.1
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-48"
        >
          <div
            class="emotion-75"
          >
            <div
              class="emotion-76"
            >
              <div
                class="emotion-77"
              >
                <hr
                  aria-hidden="true"
                  class="emotion-45"
                  data-testid="divider"
                />
                <div
                  class="emotion-44"
                />
                <div
                  class="emotion-29"
                >
                  <a
                    class="emotion-30"
                    data-testid="buttonLink"
                    href="https://github.com/newscorp-ghfb/ncu-newskit"
                    target="_blank"
                  >
                    <div
                      class="emotion-31"
                    >
                      <div
                        class="emotion-32"
                      >
                        <svg
                          aria-hidden="true"
                          class="emotion-33"
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M11.9990792,2 C6.47773105,2 2,6.47565999 2,11.9970521 C2,16.4137976 4.86503576,20.1603908 8.83876117,21.4822847 C9.33908346,21.5743385 9.5214095,21.2656512 9.5214095,21.000536 C9.5214095,20.7636506 9.512815,20.1346157 9.50790386,19.3006075 C6.72635747,19.904481 6.13947635,17.9603029 6.13947635,17.9603029 C5.68458209,16.8053335 5.02894503,16.4978735 5.02894503,16.4978735 C4.12099819,15.878044 5.09770097,15.8903179 5.09770097,15.8903179 C6.10141502,15.9608925 6.62936247,16.9207077 6.62936247,16.9207077 C7.52134811,18.4481885 8.97013414,18.0069436 9.53982627,17.7510338 C9.63068234,17.1054292 9.88913104,16.6647979 10.174591,16.415025 C7.95414224,16.1627974 5.6195095,15.3048551 5.6195095,11.4741861 C5.6195095,10.3830406 6.00933116,9.49011794 6.64900703,8.79173579 C6.54587311,8.53889444 6.20270727,7.52200584 6.74722981,6.14610707 C6.74722981,6.14610707 7.5864207,5.87730972 9.4968538,7.17097368 C10.2943,6.94881697 11.150066,6.8383523 12.0003069,6.83405645 C12.849934,6.8383523 13.7050861,6.94881697 14.5037601,7.17097368 C16.4129654,5.87730972 17.2509285,6.14610707 17.2509285,6.14610707 C17.7966788,7.52200584 17.453513,8.53889444 17.350993,8.79173579 C17.9918966,9.49011794 18.3786488,10.3830406 18.3786488,11.4741861 C18.3786488,15.3146742 16.0403327,16.1597289 13.8131312,16.407047 C14.1716443,16.7157344 14.4914822,17.3257448 14.4914822,18.2585575 C14.4914822,19.5945663 14.4792044,20.6728241 14.4792044,21.000536 C14.4792044,21.2681059 14.6596888,21.5792481 15.1667639,21.481671 C19.1374198,20.1567087 22,16.4125702 22,11.9970521 C22,6.47565999 17.5222689,2 11.9990792,2"
                            fill-rule="nonzero"
                          />
                        </svg>
                      </div>
                      <div
                        class="emotion-32"
                      >
                        <span
                          class="emotion-35"
                        >
                          View code
                        </span>
                      </div>
                    </div>
                  </a>
                </div>
              </div>
              <div
                class="emotion-77"
              >
                <div
                  class="emotion-29"
                >
                  <a
                    class="emotion-30"
                    data-testid="buttonLink"
                    href="https://github.com/newscorp-ghfb/ncu-newskit"
                    target="_blank"
                  >
                    <div
                      class="emotion-31"
                    >
                      <div
                        class="emotion-32"
                      >
                        <svg
                          aria-hidden="true"
                          class="emotion-33"
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M12.3333 12C12.3333 11.0275 12.7196 10.0949 13.4073 9.40729C14.0949 8.71965 15.0275 8.33334 16 8.33334C16.9724 8.33334 17.9051 8.71965 18.5927 9.40729C19.2803 10.0949 19.6666 11.0275 19.6666 12C19.6666 12.9725 19.2803 13.9051 18.5927 14.5927C17.9051 15.2804 16.9724 15.6667 16 15.6667C15.0275 15.6667 14.0949 15.2804 13.4073 14.5927C12.7196 13.9051 12.3333 12.9725 12.3333 12V12Z"
                            fill="#1ABCFE"
                          />
                          <path
                            d="M5 19.3333C5 18.3609 5.38631 17.4282 6.07394 16.7406C6.76158 16.053 7.69421 15.6667 8.66667 15.6667H12.3333V19.3333C12.3333 20.3058 11.947 21.2384 11.2594 21.926C10.5718 22.6137 9.63913 23 8.66667 23C7.69421 23 6.76158 22.6137 6.07394 21.926C5.38631 21.2384 5 20.3058 5 19.3333V19.3333Z"
                            fill="#0ACF83"
                          />
                          <path
                            d="M12.3333 1V8.33333H16C16.9724 8.33333 17.9051 7.94703 18.5927 7.25939C19.2803 6.57176 19.6666 5.63913 19.6666 4.66667C19.6666 3.69421 19.2803 2.76158 18.5927 2.07394C17.9051 1.38631 16.9724 1 16 1L12.3333 1Z"
                            fill="#FF7262"
                          />
                          <path
                            d="M5 4.66667C5 5.63913 5.38631 6.57176 6.07394 7.25939C6.76158 7.94703 7.69421 8.33333 8.66667 8.33333H12.3333V1H8.66667C7.69421 1 6.76158 1.38631 6.07394 2.07394C5.38631 2.76158 5 3.69421 5 4.66667V4.66667Z"
                            fill="#F24E1E"
                          />
                          <path
                            d="M5 12C5 12.9725 5.38631 13.9051 6.07394 14.5927C6.76158 15.2804 7.69421 15.6667 8.66667 15.6667H12.3333V8.33334H8.66667C7.69421 8.33334 6.76158 8.71965 6.07394 9.40729C5.38631 10.0949 5 11.0275 5 12V12Z"
                            fill="#A259FF"
                          />
                        </svg>
                      </div>
                      <div
                        class="emotion-32"
                      >
                        <span
                          class="emotion-35"
                        >
                          View Design
                        </span>
                      </div>
                    </div>
                  </a>
                </div>
                <div
                  class="emotion-44"
                />
                <hr
                  aria-hidden="true"
                  class="emotion-45"
                  data-testid="divider"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  @media screen and (max-width: 767px) {
  .emotion-0 {
    margin-bottom: 0;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    margin-bottom: 80px;
  }
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;
